# backend/src/inventory/device-group/dto/device-group-get-query.dto.ts
@@ -1,20 +1,16 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsNumber, IsOptional, Max, Min } from 'class-validator';
-import { Type } from 'class-transformer';
+import { IsIn, IsOptional, IsString } from 'class-validator';
 
 export class DeviceGroupGetQueryDto {
   @ApiProperty({ required: false })
   @IsOptional()
-  @IsNumber()
-  @Min(0)
-  @Max(100)
-  @Type(() => Number)
-  limit?: number;
+  @IsString()
+  @IsIn(['id', 'name'])
+  sortCol?: string;
 
   @ApiProperty({ required: false })
   @IsOptional()
-  @IsNumber()
-  @Min(0)
-  @Type(() => Number)
-  offset?: number;
+  @IsString()
+  @IsIn(['ASC', 'DESC'])
+  sortDir?: 'ASC' | 'DESC';
 }
