# backend/src/inventory/device-type/dto/device-type-get-query.dto.ts
@@ -1,20 +1,23 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsNumber, IsOptional, Max, Min } from 'class-validator';
-import { Type } from 'class-transformer';
+import { IsIn, IsOptional, IsString } from 'class-validator';
 
 export class DeviceTypeGetQueryDto {
   @ApiProperty({ required: false })
   @IsOptional()
-  @IsNumber()
-  @Min(0)
-  @Max(100)
-  @Type(() => Number)
-  limit?: number;
+  @IsString()
+  @IsIn([
+    'id',
+    'name',
+    'pricePerUnit',
+    'manufactor',
+    'dealer',
+    'visualInspectionAfterUsage',
+  ])
+  sortCol?: string;
 
   @ApiProperty({ required: false })
   @IsOptional()
-  @IsNumber()
-  @Min(0)
-  @Type(() => Number)
-  offset?: number;
+  @IsString()
+  @IsIn(['ASC', 'DESC'])
+  sortDir?: 'ASC' | 'DESC';
 }
