# backend/src/inventory/device/dto/device-get-query.dto.ts
@@ -1,30 +1,7 @@
 import { ApiProperty } from '@nestjs/swagger';
-import {
-  IsInt,
-  IsNumber,
-  IsOptional,
-  IsPositive,
-  Max,
-  Min,
-} from 'class-validator';
-import { Type } from 'class-transformer';
+import { IsIn, IsInt, IsOptional, IsPositive, IsString } from 'class-validator';
 
 export class DeviceGetQueryDto {
-  @ApiProperty({ required: false, nullable: true })
-  @IsOptional()
-  @IsNumber()
-  @IsPositive()
-  @Max(100)
-  @Type(() => Number)
-  limit?: number;
-
-  @ApiProperty({ required: false, nullable: true })
-  @IsOptional()
-  @IsNumber()
-  @Min(0)
-  @Type(() => Number)
-  offset?: number;
-
   @ApiProperty({ required: false, nullable: true })
   @IsOptional()
   @IsInt()
@@ -42,4 +19,33 @@ export class DeviceGetQueryDto {
   @IsInt()
   @IsPositive()
   locationId?: number;
+
+  @ApiProperty({ required: false })
+  @IsOptional()
+  @IsString()
+  @IsIn([
+    'id',
+    'name',
+    'manufactor',
+    'dealer',
+    'serial',
+    'serialManufactor',
+    'barcode1',
+    'barcode2',
+    'producedDate',
+    'activeDate',
+    'decomissionDateManufacture',
+    'decomissionDate',
+    'state',
+    'type.name',
+    'group.name',
+    'location.name',
+  ])
+  sortCol?: string;
+
+  @ApiProperty({ required: false })
+  @IsOptional()
+  @IsString()
+  @IsIn(['ASC', 'DESC'])
+  sortDir?: 'ASC' | 'DESC';
 }
